<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbarTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_button"
        app:title="@string/set_data">
    </androidx.appcompat.widget.Toolbar>

    <include
        android:id="@+id/editName"
        layout="@layout/edit_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <include
        android:id="@+id/editId"
        layout="@layout/edit_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editName"
        />

    <Button
        android:id="@+id/btnLoadFromBrickLink"
        style="@style/StandartButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standart_button"
        android:layout_weight="0"
        android:text="@string/load_from_brick_link"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editId"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnGoToCollect"
        style="@style/StandartButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standart_button"
        android:layout_weight="0"
        android:text="@string/go_to_collect"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>